--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -25,7 +25,9 @@ jobs:
           # for example <img src="./images/file-name.png">
           image_import: ./images
           # Default is true, can set to false to only get PDF files
-          build_html: false
+          build_html: true
+          build_pdf: true
+          table_of_contents: true
       - uses: actions/upload-artifact@v3
         with:
           name: docs
