--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -28,7 +28,9 @@ jobs:
           build_html: true
           build_pdf: true
           table_of_contents: true
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v4
         with:
           name: docs
           path: pdfs
+          if-no-files-found: warn
+          overwrite: true
