--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -31,6 +31,8 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: docs
-          path: pdfs
+          path: |
+            pdfs
+            docs/pdfs
           if-no-files-found: warn
           overwrite: true
