yaml path update

--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -33,6 +33,7 @@ jobs:
           name: docs
           path: |
             pdfs
+            docs
             docs/pdfs
           if-no-files-found: warn
           overwrite: true
