--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -31,6 +31,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           path: |
+            sample-actions-proj
             pdfs
             docs
             docs/pdfs
