--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -30,10 +30,6 @@ jobs:
           table_of_contents: true
       - uses: actions/upload-artifact@v4
         with:
-          path: |
-            sample-actions-proj
-            pdfs
-            docs
-            docs/pdfs
+          path: '*'
           if-no-files-found: warn
           overwrite: true
