--- a/.github/workflows/convert-to-pdf.yml
+++ b/.github/workflows/convert-to-pdf.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: BaileyJM02/markdown-to-pdf@v1.2.0
         with:
           input_dir: docs
-          output_dir: docs/pdfs
+          output_dir: docs/pdfs/
           images_dir: docs/images
           # for example <img src="./images/file-name.png">
           image_import: ./images
