--- a/.github/workflows/lines_of_code.yml
+++ b/.github/workflows/lines_of_code.yml
@@ -17,6 +17,10 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    permissions:
+        contents: read # allows reading repository contents (needed for checkout)
+        actions: write # allows workflow to create/cancel workflow runs (needed for push)
+
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
